no commit message

--- a/Languages/JavaScript/JavaScript_core/JavaScript.language.txt
+++ b/Languages/JavaScript/JavaScript_core/JavaScript.language.txt
@@ -11,7 +11,7 @@ VERSION ==>                                     #Standard is called ECMAScript. 
 SUPPORT ==>                                     #Use this notation for new features:
                                                ~#  - stage 3 proposal
                                             NUM*#  - introduced by Node NUM.*.* (starting at Node 9)
-                                               *#  - not Node 16.3.0
+                                               *#  - not Node 16.6.1
                                                -#  - not all supported web browsers
                                                |#  - a core Babel plugin exists (only documented if lacks Node/browser support)
                                               ||#  - a non-core Babel plugin exists
@@ -695,7 +695,7 @@ Object.hasOwn(OBJ, 'VAR')                   *-|~#Same
 'VAR' in OBJ                                    #Returns true if OBJ['VAR'] is member, including shared or non-enumerable.
                                                 #Negation: !('VAR' in OBJ)
                                                 #Note: for (QUAL STR in OBJ) includes shared, but excludes non-enumerable
-#PROP in OBJ                                 *-|#Returns true if OBJ has private #PROP
+#PROP in OBJ                           16.5.0*-|#Returns true if OBJ has private #PROP
 
 Object.assign(OBJ[, OBJ2...])                 -|#Shallow copy of own enumerable OBJ2 members to OBJ, which is returned.
                                               -|#Also copies SYMs.
@@ -1084,7 +1084,7 @@ FUNC `...`                                    -|#  - VAL... are each ${EXPR}
 
 STR[NUM]                                        #Read-only. undefined if out of range.
 STR.charAt(NUM)                                 #Same except "" if out of range
-STR.at(NUM)->'CHAR'                         *-|~#Like STR[NUM] except -NUM is from end, and is not writable
+STR.at(NUM)->'CHAR'                   16.6.0*-|~#Like STR[NUM] except -NUM is from end, and is not writable
 
 STR.length                                      #Number of characters (not bytes)
 
@@ -1511,7 +1511,7 @@ Array.of(VAL...)                              -|#Same as new Array(VAL...) excep
 
 ARR[NUM]                                        #
 ARR?.[NUM]                             14.0.0*-|#Like ARR == null ? undefined : ARR[NUM]
-ARR.at(NUM)->VAL                            *-|~#Like STR[NUM] except -NUM is from end, and is not writable
+ARR.at(NUM)->VAL                      16.6.0*-|~#Like STR[NUM] except -NUM is from end, and is not writable
 
 ARRAYLIKE                                       #Any OBJ which understand OBJ[NUM] and OBJ.length
                                                 #Can use all ARR methods, except concat() using:
@@ -2095,9 +2095,9 @@ import "MDL"                                  -|#Do not import the variable, jus
 import("MDL")->PROMISE(OBJ)                   -|#As opposed to above, not static (dynamic), i.e. does not have to be top-level
                                               -|#If default export, defined in OBJ.default
 
-import ... "MDL" assert { VAR: "VAL", ... } *~-|#Adds information about import using VAR: VAL
-import("MDL", { assert: { VAR: "VAL", ...}})*~-|#Most VAR is host-specific, but the following are standard:
- ->PROMISE(VAL)                             *~-|#  - type 'json': file format is JSON
+import ... "MDL" assert { VAR: "VAL", ... } *-|~#Adds information about import using VAR: VAL
+import("MDL", { assert: { VAR: "VAL", ...}})*-|~#Most VAR is host-specific, but the following are standard:
+ ->PROMISE(VAL)                             *-|~#  - type 'json': file format is JSON
 
 CIRCULAR DEPENDENCIES ==>                     -|#Accessing circular properties during file loading throws an error.
                                               -|#But accessing them later works.
