--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -21,7 +21,7 @@ Todo:
 PURPOSE ==>                                     #Execute JavaScript code server-side
                                                 #Based on Chrome JavaScript engine V8
 
-VERSION ==>                                     #16.4.2 (current), 15.14.0 (maintenance), 14.17.3 (active LTS), 12.22.3 (maintenance)
+VERSION ==>                                     #16.6.0 (current), 15.14.0 (maintenance), 14.17.3 (active LTS), 12.22.3 (maintenance)
                                                 #Branches:
                                                 #  - "current": latest major version. New one every 0.5 years
                                                 #  - LTS: every even-numbered version
@@ -1276,7 +1276,7 @@ REPLSERVER.setupHistory                         #Must be called to use history.
 .save FILE                                      #Save all input so far to FILE
 .load FILE                                      #Input FILE
 
---experimental-repl-await                       #Allow using await top-level in REPL
+--experimental-repl-await                <16.6.0#Allow using await top-level in REPL
 
 DEFAULT REPL ==>                                #Uses REPL except:
                                                 #  - calls REPLSERVER.setupHistory('PATH')
@@ -2373,6 +2373,7 @@ createWriteStream(PATH[, OPTS])->OSTREAM        #OPTS has members flags, default
                                                 #  - bytesWritten UINT
 
 mkdtemp('PATH', FUNC(ERROR, 'PATH2'))           #Create temp file at 'PATHrandom', with random being 6 chars [:alnum:] (36 bits of entropy)
+                                         16.5.0*#'PATH' can be ''
 
 watch('FILE|DIR'[, OPTS][, FUNC])->FSWATCHER    #FSWATCHER fires events when file changes name or content.
                                                 #OPTS:
@@ -3676,8 +3677,8 @@ ENCODING                                        #Either: ascii, utf8 (def), urf1
                                                 #  - if 'full' ICU: many more (see online doc)
 
 TextDecoder|TextEncoder                         #See DOM doc.
-TextEncoderStream                        16.5.0*#See DOM doc
-TextDecoderStream                        16.5.0*#Print experimental warning
+TextEncoderStream                        16.6.0*#See DOM doc
+TextDecoderStream                        16.6.0*#Print experimental warning
 
 
                                              /=+===============================+=\
