no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -21,7 +21,7 @@ Todo:
 PURPOSE ==>                                     #Execute JavaScript code server-side
                                                 #Based on Chrome JavaScript engine V8
 
-VERSION ==>                                     #16.6.0 (current), 15.14.0 (maintenance), 14.17.3 (active LTS), 12.22.3 (maintenance)
+VERSION ==>                                     #16.6.1 (current), 15.14.0 (maintenance), 14.17.4 (active LTS), 12.22.4 (maintenance)
                                                 #Branches:
                                                 #  - "current": latest major version. New one every 0.5 years
                                                 #  - LTS: every even-numbered version
@@ -721,6 +721,7 @@ PACKAGE.imports[.CONDITION].#PATH               #PATH2. Remaps import "PATH[...]
 --enable-source-maps                            #Use source maps for ERROR.stack
                                                 #Does not work with ERROR.prepareStackTrace()
                                                 #Also enables MODULE.findSourceMap|SourceMap
+process.setSourceMapsEnabled(BOOL)       16.6.0*#Same. Only for files not loaded yet.
 
 new MODULE.SourceMap(SOURCEMAP_OBJ)             #SOURCEMAP.
                                                 #SOURCEMAP_OBJ has source map v3 raw properties
