no commit message

--- a/Languages/JavaScript/JavaScript_core/JavaScript.language.txt
+++ b/Languages/JavaScript/JavaScript_core/JavaScript.language.txt
@@ -1290,12 +1290,13 @@ new Intl.NumberFormat([LOCALEOPTS])         -|||#Number locale formatting.
                                           *-|||~#  - precision 'one' (def) or 'nickel'
                                           *-|||~#  - scale NUM (def: -2 if 'unit', 0 otherwise): multiply by 1eNUM
                                           *-|||~#  - roundingMode STR:
-                                          *-|||~#     - 'halfUp' (def) or 'halfDown': closest. If half, up|down
+                                          *-|||~#     - 'ceil|floor': towards +|-Infinity
+                                          *-|||~#     - 'expand|trunc': away|towards 0
+                                          *-|||~#     - 'halfExpand' (def) or 'halfTrunc|Ceil|Floor': closest. If half, expand|trunc|ceil|floor
                                           *-|||~#     - 'halfEven'
-                                          *-|||~#     - 'ceiling|floor': towards +|-Infinity
-                                          *-|||~#     - 'up|down': away|towards 0
                                             -|||#  - signDisplay 'auto' (def) (-1|-0|0|1), 'always' (-1|-0|+0|+1),
-                                            -|||#    'never' (1|0|0|1), 'exceptZero' (-1|-0|0|+1)
+                                            -|||#    'never' (1|0|0|1), 'exceptZero' (-1|-0|0|+1),
+                                          *-|||~#    'negative' (-1|0|0|1)
                                             -|||#  (for style 'decimal')
                                             -|||#  - notation 'standard' (def) ('987654321'), 'compact' ('988M'),
                                             -|||#    'engineering' ('987.654E6'), 'scientific' ('9.877E8')
@@ -1401,6 +1402,7 @@ new Intl.PluralRules([LOCALEOPTS])             -#Locale-specific plural group of
                                                -#  - pluralCategories STR_ARR
 PLURALRULES.select(NUM)->STR                   -#Returns plurality of NUM according to locale, among 'zero', 'one', 'two',
                                                -#'few', 'many', 'other'
+PLURALRULES.selectRange(NUM, NUM2)->STR     *-|~#STR
 
 new Intl.ListFormat([LOCALEOPTS])              -#Format list of items with natural language.
                                                -#OPTS:
