no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -3098,6 +3098,7 @@ ALTERNATIVES ==>                                #When running 'Math.random()'
                                                 #  - as is, eval(), runIn*Context(): same thread|process
                                                 #  - Worker(): different thread
                                                 #  - spawn(): different process
+                                                #Similar to REALMs, but with more features
 
 createContext([CONT_OBJ][, CONT_OPTS])->COBJ    #COBJ is an OBJ with some hidden properties.
                                                 #CONT_OBJ is merged in.
