--- a/Languages/JavaScript/JavaScript_core/JavaScript.language.txt
+++ b/Languages/JavaScript/JavaScript_core/JavaScript.language.txt
@@ -1247,6 +1247,9 @@ new Intl.*([LOCALOPTS])                     -|||#Returns new instance of a speci
                                             -|||#Returned member always has members:
                                             -|||#  - resolvedOptions()->OPTS
 
+Intl.supportedValuesOf(STR)->STR_ARR        *-|~#Returns all possible values for a specific Intl.* method|option
+                                            *-|~#STR can be: 'currency|calendar|collation|numberingSystem|timeZone|unit'
+
 new Intl.Collator([LOCALEOPTS])                -#Locale-specific collation.
                                                -#OPTS:
                                                -#  - usage 'sort' (def) or 'search': like co "search" LOCALE_ARGS
@@ -1286,14 +1289,22 @@ new Intl.NumberFormat([LOCALEOPTS])         -|||#Number locale formatting.
                                           *-|||~#      - 'auto' (def): depends on locale
                                           *-|||~#      - 'min2': if at least two digits in each group
                                             -|||#  - minimum|maximumInteger|Fraction|SignificantDigits NUM
-                                          *-|||~#  - fractionDigits NUM: set both minimum|maximumFractionDigits
-                                          *-|||~#  - precision 'one' (def) or 'nickel'
-                                          *-|||~#  - scale NUM (def: -2 if 'unit', 0 otherwise): multiply by 1eNUM
+                                          *-|||~#  - roundingPriority STR:
+                                          *-|||~#     - when *FractionDigits and *SignificantDigits are both specified and they
+                                          *-|||~#       lead to different number of digits, decides which one has priority:
+                                          *-|||~#        - 'auto' (def): *SignificantDigits
+                                          *-|||~#        - 'morePrecision': one with most digits
+                                          *-|||~#        - 'lessPrecision': one with least digits
+                                          *-|||~#  - trailingZeroDisplay STR:
+                                          *-|||~#     - whether to show fraction digits if all 0s
+                                          *-|||~#     - can be 'auto' (yes, def) or 'stripIfInteger' (no)
                                           *-|||~#  - roundingMode STR:
                                           *-|||~#     - 'ceil|floor': towards +|-Infinity
                                           *-|||~#     - 'expand|trunc': away|towards 0
                                           *-|||~#     - 'halfExpand' (def) or 'halfTrunc|Ceil|Floor': closest. If half, expand|trunc|ceil|floor
                                           *-|||~#     - 'halfEven'
+                                          *-|||~#  - roundingIncrement NUM
+                                          *-|||~#     - among 1|2[5]|5[0[0[0]]]
                                             -|||#  - signDisplay 'auto' (def) (-1|-0|0|1), 'always' (-1|-0|+0|+1),
                                             -|||#    'never' (1|0|0|1), 'exceptZero' (-1|-0|0|+1),
                                           *-|||~#    'negative' (-1|0|0|1)
@@ -1553,6 +1564,7 @@ ARR.indexOf(VAL[, NUM])                         #Returns VAL index, or -1. Uses 
 ARR.lastIndexOf(VAL[, NUM])                     #Same but from end.
 ARR.find[Index]
  (FUNC(VAL, KEY, ARR)->BOOL[, THIS])          -|#Returns first VAL|KEY that returns true. Otherwise does not return.
+ARR.find[Index]Last(...)                    *-|~#Same but from end.
 ARR.includes(VAL[, NUM])                      -|#Same as ARR.indexOf(...) !== -1
                                               -|#Except NaN === NaN
 
@@ -2117,6 +2129,12 @@ module { ... }                               *-|#Declare a module inline.
                                              *-|#Return its 'MDL' which must be passed to import()
                                              *-|#Behave like declaring module in a separate file in terms of scope
                                              *-|#   - except import.meta.url is same
+
+new Realm()                                 *-|~#Global environment
+REALM.importValue('MDL', 'VAR')             *-|~#Like (await import('MDL')).VAR but bound to a REALM
+ ->PROMISE_VAL                              *-|~#VAL must be simple type or FUNC
+REALM.evaluate('CODE')->PROMISE_VAL         *-|~#Like eval('CODE') but bound to a REALM
+                                            *-|~#VAL must be simple type or FUNC
 
 
                                              /=+===============================+=\
