no commit message

--- a/Languages/Metaprogramming/Parsing/Parse_tokenize/JavaScript/espree.javascript.txt
+++ b/Languages/Metaprogramming/Parsing/Parse_tokenize/JavaScript/espree.javascript.txt
@@ -8,7 +8,7 @@
 ALTERNATIVES ==>                  #See acorn
                                   #Still documented since it used by ESLint
 
-VERSION ==>                       #7.3.1
+VERSION ==>                       #8.0.0
 
 DIFFERENCES FROM ACORN ==>        #Built on top of acorn but:
                                   #  - OPTS: different names and fewer options
@@ -26,7 +26,7 @@ DIFFERENCES FROM ACORN ==>        #Built on top of acorn but:
 
 
 ESPREE.parse('JS'[, OPTS])        #Like ACORN.parse('JS'), but with different OPTS:
- ->TOP_NODE                       #  - ecmaVersion (def: 5)
+ ->TOP_NODE                       #  - ecmaVersion (def: 5) (can be 'latest')
                                   #  - sourceType: like ACORN OPTS.sourceType
                                   #  - loc: like ACORN OPTS.locations
                                   #  - range: like ACORN OPTS.ranges
