no commit message

--- a/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
+++ b/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
@@ -922,6 +922,8 @@ max-statements [NUM|OBJ]          #Max number of statements per function
 max-statements-per-line [OBJ]     #Max number of statements per line
                                   #OBJ: max NUM (def: 1)
 import/max-dependencies [OBJ]    ##Avoid more than OBJ.max NUM (def: 10) import|require per file
+                                 ##OBJ:
+                                 ##  - ignoreTypeImports BOOL (def: false): ignore TypeScript type imports
 
 complexity [NUM]                  #Maximum cyclomatic complexity (def: 20), i.e. number of branches|paths per function
 max-depth [NUM]                   #Max block nesting (def: 4)
@@ -1503,6 +1505,11 @@ no-unsafe-optional-chaining [OBJ] #If OBJ2?.VAR, VAR might be undefined, i.e. do
                                   #  - a NUM without ??, if OBJ.disallowArithmeticOperators true (def: false)
 
 unicorn/prefer-object-has-own    ##Prefer Object.hasOwn() over OBJ.hasOwnProperty()
+unicorn/                         ##Prefer Object.fromEntries() over similar ARR.reduce()
+ prefer-object-from-entries [OBJ]##OBJ:
+                                 ##  - functions 'VAR'_ARR: additional functions checked.
+                                 ##    Always checked: lodash|_.fromPairs()
+
 
 
                                              /=+===============================+=\
@@ -1815,7 +1822,7 @@ node/prefer-dns/fs               ##Use DNS.promises.* instead of DNS.*
                                              \=+===============================+=/
 
 
-import/*                         ##Node module "eslint-plugin-import" (2.23.4)
+import/*                         ##Node module "eslint-plugin-import" (2.24.0)
                                  ##Most seem to work for both require() and import|export,
                                  ##although mostly targeting import|export
                                  ##Uses the following CONF.settings:
@@ -1832,7 +1839,7 @@ import/*                         ##Node module "eslint-plugin-import
                                  ##     - resolvers do preprocessing each imported path
                                  ##     - available:
                                  ##        - webpack (0.13.1), with RESOLVER_OPTS: config STR|OBJ (def: use webpack.config.js), env ENV
-                                 ##        - node (0.3.4), with RESOLVER_OPTS:
+                                 ##        - node (0.3.5), with RESOLVER_OPTS:
                                  ##           - extensions '.EXT'_ARR
                                  ##           - paths STR_ARR (like NODE_PATH)
                                  ##           - moduleDirectory STR_ARR (alternate names for node_modules)
@@ -1871,7 +1878,9 @@ import/no-unused-modules [OBJ]   ##Avoid exports that are not imported anywhere 
                                  ##OBJ:
                                  ##  - src 'PATH'_ARR (def: process.cwd()): to include
                                  ##  - ignoreExports 'PATH'_ARR: to exclude (always excluded: PACKAGE.main|browser|bin, but does not perfectly work)
-import/named                     ##Avoid import { VAR } from 'PATH', if PATH does not export VAR
+import/named [OBJ]               ##Avoid import { VAR } from 'PATH', if PATH does not export VAR
+                                 ##OBJ:
+                                 ##  - commonjs BOOL (def: false): also CommonJS
 import/default                   ##Avoid import VAR from 'PATH', if PATH does not export default VAR
 import/namespace [OBJ]           ##Avoid import * as OBJ2 from 'PATH', then using OBJ2.VAR, if PATH does not export VAR
                                  ##Also, if OBJ.allowComputed false (def), avoid OBJ2['VAR']
@@ -1898,7 +1907,9 @@ unicorn/import-style [OBJ]       ##Enforces specific destructuring style for imp
                                  ##  - checkDynamicImport BOOL (def: true): if false, ignore ESM import()
                                  ##  - checkExportFrom BOOL: if false (def), ignore ESM export ... from
 
-import/no-namespace              ##Avoid import *
+import/no-namespace [OBJ]        ##Avoid import *
+                                 ##OBJ:
+                                 ##  - 'GLOB'_ARR: modules to ignore
 import/no-named-default          ##Avoid import { default as VAR }
 import/no-named-export           ##Avoid non-default export
 import/prefer-default-export     ##Must use export default VAL instead of export VAL
@@ -2018,7 +2029,9 @@ import/unambiguous               ##Make sure file types matches parserOptions.so
 
 node/global-require               #require() must be at top-level scope
 node/no-new-require               #Avoid new require()
-import/no-dynamic-require        ##Avoid require(STR) where STR is computed, i.e. not a literal string
+import/no-dynamic-require [OBJ]  ##Avoid require(STR) where STR is computed, i.e. not a literal string
+                                 ##OBJ:
+                                 ##  - esmodule BOOL (def: false): also import()
 
 import/no-commonjs [OBJ]         ##Avoid require() or module.exports
                                  ##OBJ:
