no commit message

--- a/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
+++ b/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
@@ -1174,7 +1174,6 @@ unicorn/explicit-length-check    ##Avoid implicit transtyping of ARR|STR.length
                                  ##  - non-zero: whether length !== 0 should be
                                  ##     - 'not-equal': !== 0
                                  ##     - 'greater-than' (def): > 0
-                                 ##     - 'greater-than-or-equal': >= 1
 
 no-new-wrappers                   #Avoid new String|Number|Boolean()
 unicorn/new-for-builtins         ##Avoid new String|Number|Boolean|Symbol|Bigint(). Force new with all other builtins,
@@ -1385,6 +1384,7 @@ no-dupe-args                      #Avoid duplicate argument names
 
 prefer-spread                     #Avoid FUNC.apply(), prefer ...ARR
 unicorn/prefer-spread            ##Avoid Array.from(), prefer ...ARR
+unicorn/no-useless-spread        ##Avoid ...ARR|OBJ when unnecessary: literal ARR|OBJ, MAP|SET constructor, Array.from(), Object.fromEntries(), Promise.*()
 prefer-rest-params                #Avoid "arguments", prefer ...ARG
 fp/no-arguments                  ##Avoid arguments
 fp/no-rest-parameters            ##Avoid ...ARG
@@ -1593,11 +1593,14 @@ array-callback-return [OBJ]       #[TYPED_]ARR.from|every|some|filter|find[Index
 unicorn/prefer-includes          ##Prefer ARR|STR.includes() over ARR|STR.indexOf|some()
 unicorn/prefer-array-flat-map    ##Prefer ARR.flatMap() over ARR.map().flat()
 unicorn/prefer-array-flat        ##Prefer ARR.flat() over [].concat()
-unicorn/no-array-reduce          ##Prefer ARR.map|filter() over ARR.reduce()
+unicorn/no-array-reduce [OBJ]    ##Prefer ARR.map|filter() over ARR.reduce()
+                                 ##OBJ:
+                                 ##  - allowSimpleOperations BOOL (def: true): allow ARR.reduce() if single statement
 unicorn/prefer-negative-index    ##Prefer ARR|STR|TYPED_ARR.slice|splice(-NUM, ...) instead of slice|splice(ARR|STR|TYPED_ARR.length - NUM, ...)
 unicorn/prefer-array-find        ##Prefer ARR.find() over ARR.filter()[0]
 unicorn/prefer-array-some        ##Prefer ARR.some() over ARR.find()
 unicorn/prefer-array-index-of    ##Prefer ARR.indexOf() over ARR.findIndex() when possible
+unicorn/no-useless-length-check  ##Avoid ARR.length check if followed by ARR.some|every()
 unicorn/no-array-for-each        ##Prefer for loop over ARR.forEach()
 unicorn/no-array-push-push [OBJ] ##Combine multiple ARR.push() calls into one
                                  ##OBJ:
@@ -1629,7 +1632,7 @@ no-useless-concat                 #Avoid STR_LIT + STR2_LIT
 prefer-template                   #Avoid STR + STR2, prefer `...`
 no-template-curly-in-string       #Avoid ${} inside "" or ''
 
-unicorn/*                        ##Module "eslint-plugin-unicorn" (34.0.1)
+unicorn/*                        ##Module "eslint-plugin-unicorn" (35.0.0)
 
 unicorn/
  prefer-string-starts-ends-with  ##Must use STR.startsWith|endsWith() when possible
