no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -1035,10 +1035,8 @@ ReadableStreamByobReader
 WritableStream
 WritableStreamDefaultWriter
 TransformStream
-ByteLengthQueuingStrategy
-CountQueuingStrategy
-TextEncoderStream                        16.5.0*#See DOM doc
-TextDecoderStream                        16.5.0*#Print experimental warning
+ByteLengthQueuingStrategy                16.5.0*#See DOM doc
+CountQueuingStrategy                     16.5.0*#Print experimental warning
 
 
                                              /=+===============================+=\
@@ -3678,6 +3676,8 @@ ENCODING                                        #Either: ascii, utf8 (def), urf1
                                                 #  - if 'full' ICU: many more (see online doc)
 
 TextDecoder|TextEncoder                         #See DOM doc.
+TextEncoderStream                        16.5.0*#See DOM doc
+TextDecoderStream                        16.5.0*#Print experimental warning
 
 
                                              /=+===============================+=\
