no commit message

--- a/Languages/JavaScript/JavaScript_core/JavaScript.language.txt
+++ b/Languages/JavaScript/JavaScript_core/JavaScript.language.txt
@@ -1702,12 +1702,13 @@ Atomics.isLockFree(S_ARRBUFFER, NUM)->BOOL     -#True if underlying hardware can
 ITERATOR                                      -|#OBJ with:
                                               -|#  - next([ARG]):
                                               -|#     - iterates over next value -> { done: false, value: NEXT }
-                                              -|#     - if iteration finished -> { done: true, value: undefined }
+                                              -|#     - if iteration finished -> { done: true, value: RETURN }
+                                              -|#        - RETURN is the optional return value of the whole iteration
+                                              -|#           - it is not the iteration's last value
+                                              -|#           - undefined if already returned by previous next|return()
                                               -|#  - return([ARG])->{ done: true, value: RETURN }
                                               -|#     - finish iteration successfully
-                                              -|#     - RETURN is the optional return value of the whole iteration
-                                              -|#        - it is not the iteration's last value
-                                              -|#     - if iteration finished, noop and RETURN is ignored
+                                              -|#     - if iteration finished, noop and RETURN is undefined
                                               -|#     - optional
                                               -|#  - throw([ARG]):
                                               -|#     - finish iteration due to error
@@ -1719,17 +1720,22 @@ ITERABLE                                      -|#OBJ where OBJ[Symbol.iterator](
                                               -|#STR|[TYPED_]ARR|MAP|SET are ITERABLE (only next() is defined)
 ITERABLETOR                                   -|#ITERATOR where OBJ[Symbol.iterator]()->ITERABLETOR (itself)
                                               -|#I.e. used as an ITERABLE, but always with the same ITERATOR
+ASYNC_ITERATOR|ITERABLE|ITERABLETOR           -|#Same except:
+                                              -|#  - next|return|throw() can return a PROMISE
+                                              -|#  - Symbol.iterator -> Symbol.asyncIterator
+                                              -|#Can be used as ITERATOR|ITERABLE|ITERABLETOR, but not vice-versa
+                                              -|#PROMISE_ARR are ASYNC_ITERABLE
 
-function* [FUNC](){...}                       -|#Generator. FUNC returns an ITERABLETOR:
-[class ...] { * FUNC(...) {...} ... }         -|#  - next([VAL]):
+[async] function* [FUNC](){...}               -|#Generator. FUNC returns an ITERABLETOR with ITERATOR:
+[class ...] { [async] * FUNC(...) {...} ... } -|#  - next([VAL]):
                                               -|#     - continue execution of function until any of:
                                               -|#        - yield NEXT -> { done: false, value: NEXT }
                                               -|#        - return RETURN -> { done: true, value: RETURN }
                                               -|#        - execution finished -> { done: true, value: undefined }
                                               -|#        - throw VAL -> propagate exception
-                                              -|#     - VAL is last "yield" return value
+                                              -|#     - VAL is previous "yield" return value
                                               -|#     - initially stopped at the beginning
-                                              -|#        - i.e. VAL is noop since no "yield" yet
+                                              -|#        - i.e. VAL is ignored since no "yield" yet
                                               -|#  - return([RETURN])
                                               -|#     - "return RETURN" from current execution position, i.e. finish execution
                                               -|#     - if execution finished, noop and RETURN ignored
@@ -1739,26 +1745,19 @@ function* [FUNC](){...}                       -|#Generator. FUNC returns an ITER
                                               -|#     - if execution finished, throw VAL from caller position
 yield* ITERABLE                               -|#Like: for (const NEXT of ITERABLE) { yield NEXT }
                                               -|#Return value is ITERABLE's RETURN
-new GeneratorFunction(...)                    -|#Like new Function(...) but for function*(){}
-                                              -|#GeneratorFunction not available globally, but with:
-                                              -|#  Object.getPrototypeOf(function*(){}).constructor
+yield* ASYNC_ITERABLE                         -|#Same for: for await (const NEXT of ASYNC_ITERABLE) { yield NEXT }
+new [Async]GeneratorFunction(...)             -|#Like new Function(...) but for [async] function*(){}
+                                              -|#[Async]GeneratorFunction not available globally, but with:
+                                              -|#  Object.getPrototypeOf([async] function*(){}).constructor
 
-ASYNC_ITERATOR                                -|#ITERATOR whose next|return|throw(...)->PROMISE(VAL) (instead of returning|throwing VAL)
-ASYNC_ITERABLE                                -|#OBJ where OBJ[Symbol.asyncIterator]()->ASYNC_ITERATOR
-                                              -|#PROMISE_ARR are ASYNC_ITERABLE
-                                              -|#Cannot be used as an ITERABLE, only as an ASYNC_ITERABLE (i.e. for await)
-
-async function * [FUNC](...) {...}            -|#Generator that:
-[class ...] { async * FUNC(...) {...} ... }   -|#  - is an ASYNC_ITERATOR|ITERABLE
-new AsyncGeneratorFunction(...)               -|#  - can use yield* ASYNC_ITERABLE
-
-for ( [QUAL] VAR of ITERABLE ) {...}          -|#Iterates with VAR = ITERATOR.next().value until done true
+for ( [QUAL] NEXT of ITERABLE ) {...}         -|#Iterates with NEXT = ITERATOR.next().value until done true
                                               -|#break|return|throw calls ITERATOR.return()
                                               -|#Does not call ITERATOR.throw()
-for await (QUAL VAR of ASYNC_ITERABLE) {...}  -|#Same but using await ITERATOR.next().value
+for await (QUAL NEXT of [ASYNC_]ITERABLE)
+ {...}                                        -|#Same but using await [ASYNC_]ITERATOR.next().value
 
 [...ITERABLE]                                 -|#In ARR literal form
-                                              -|#Iterates with ITERATOR.next().value until done true, then return aggregated values as ARR
+                                              -|#Iterates with ITERATOR.next().value until done true, then returns aggregated values as ARR
                                               -|#Does not call ITERATOR.return|throw()
 
 
